[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.3", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
